# py-utils

./: .gitignore  README.md  gemini-common-prompt.md  pyproject.toml
examples/: mjpeg-bare.py  mjpeg-opencv.py  mjpeg-opencv2.py  monitor-mini-pyside6.py  monitor-mini-schemas.md  monitor-mini-tkinter.py  monitor_process-pyside6.py  monitor_process.py  pytop_simplified.py
src/py_utils/: datetime.py  dl_binaries.py  misc.py  process.py  stats.py  widgets.py  widgets_tk.py
